load("//:mocha.bzl", "mocha_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

sh_test(
    name = "trie_test",
    data = [
        "//:node_modules/jsdom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/jsdom-global",
        "//:node_modules/fast-check",
        "//:node_modules/snap-shot-it",
        "//:node_modules/testcheck",
        "//:node_modules/showdown-xss-filter",
        "//:node_modules/@anthropic-ai/sdk",
        "//:node_modules/@aws-crypto/sha256-js",
        "//:node_modules/@c88/v8-coverage",
        "//:node_modules/@formatjs/intl",
        "//:node_modules/@formatjs/intl-localematcher",
        "//:node_modules/@googleapis/sheets",
        "//:node_modules/@popperjs/core",
        "//:node_modules/@sentry/types",
        "//:node_modules/@types/chrome-remote-interface",
        "//:node_modules/@types/color",
        "//:node_modules/@types/dedent",
        "//:node_modules/@types/express",
        "//:node_modules/@types/functional-red-black-tree",
        "//:node_modules/@types/imurmurhash",
        "//:node_modules/@types/ip",
        "//:node_modules/@types/json-schema",
        "//:node_modules/@types/json-stable-stringify",
        "//:node_modules/@types/mdurl",
        "//:node_modules/@types/moment-timezone",
        "//:node_modules/@types/passport-azure-ad",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/@types/react-modal",
        "//:node_modules/@types/remove-markdown",
        "//:node_modules/@types/request",
        "//:node_modules/@types/seed-random",
        "//:node_modules/@types/semver",
        "//:node_modules/@types/showdown",
        "//:node_modules/@types/sockjs-client",
        "//:node_modules/@types/urijs",
        "//:node_modules/@types/uuid",
        "//:node_modules/@types/whatwg-mimetype",
        "//:node_modules/@types/zxcvbn",
        "//:node_modules/aws-sdk",
        "//:node_modules/base64-js",
        "//:node_modules/benchmark",
        "//:node_modules/bignumber.js",
        "//:node_modules/chrome-remote-interface",
        "//:node_modules/classnames",
        "//:node_modules/color",
        "//:node_modules/dedent",
        "//:node_modules/emotion",
        "//:node_modules/express",
        "//:node_modules/fast-deep-equal",
        "//:node_modules/functional-red-black-tree",
        "//:node_modules/immer",
        "//:node_modules/imurmurhash",
        "//:node_modules/ip",
        "//:node_modules/json-schema",
        "//:node_modules/json-stable-stringify",
        "//:node_modules/mdurl",
        "//:node_modules/memoize-one",
        "//:node_modules/moment-timezone",
        "//:node_modules/openai",
        "//:node_modules/openapi3-ts",
        "//:node_modules/passport-azure-ad",
        "//:node_modules/path-to-regexp",
        "//:node_modules/quill-delta",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/react-intl",
        "//:node_modules/react-markdown",
        "//:node_modules/react-modal",
        "//:node_modules/remove-markdown",
        "//:node_modules/request",
        "//:node_modules/seed-random",
        "//:node_modules/semver",
        "//:node_modules/showdown",
        "//:node_modules/simple-markdown",
        "//:node_modules/slackify-markdown",
        "//:node_modules/sockjs-client",
        "//:node_modules/ssf",
        "//:node_modules/tiktoken",
        "//:node_modules/ulidx",
        "//:node_modules/universal-base64url",
        "//:node_modules/urijs",
        "//:node_modules/uuid",
        "//:node_modules/vega",
        "//:node_modules/whatwg-mimetype",
        "//:node_modules/xml-js",
        "//:node_modules/zxcvbn",
        "//:node_modules/@anthropic-ai/tokenizer",
        "//:node_modules/@aws-sdk/client-appconfig",
        "//:node_modules/@aws-sdk/client-athena",
        "//:node_modules/@aws-sdk/client-dynamodb",
        "//:node_modules/@aws-sdk/client-kinesis",
        "//:node_modules/@aws-sdk/client-kms",
        "//:node_modules/@aws-sdk/client-rds",
        "//:node_modules/@aws-sdk/client-s3",
        "//:node_modules/@aws-sdk/client-secrets-manager",
        "//:node_modules/@aws-sdk/lib-storage",
        "//:node_modules/@aws-sdk/node-http-handler",
        "//:node_modules/@aws-sdk/s3-presigned-post",
        "//:node_modules/@aws-sdk/s3-request-presigner",
        "//:node_modules/@aws-sdk/signature-v4",
        "//:node_modules/@aws-sdk/types",
        "//:node_modules/@datadog/datadog-api-client",
        "//:node_modules/@googleapis/drive",
        "//:node_modules/@smithy/types",
        "//:node_modules/@types/aws-kcl",
        "//:node_modules/@types/aws-lambda",
        "//:node_modules/@types/body-parser",
        "//:node_modules/opentracing",
        "//:node_modules/@types/bytes",
        "//:node_modules/@types/cheerio",
        "//:node_modules/@types/compression",
        "//:node_modules/@types/cookies",
        "//:node_modules/@types/cron",
        "//:node_modules/@types/deep-diff",
        "//:node_modules/@types/diff-match-patch",
        "//:node_modules/@types/eslint",  # TODO(zbarsky): Not ideal that we run eslint as part of codegen...
        "//:node_modules/@types/express-serve-static-core",
        "//:node_modules/@types/follow-redirects",
        "//:node_modules/@types/fs-extra",
        "//:node_modules/@types/glob",
        "//:node_modules/@types/hashring",
        "//:node_modules/@types/heapdump",
        "//:node_modules/@types/html-to-text",
        "//:node_modules/@types/jsonwebtoken",
        "//:node_modules/@types/jws",
        "//:node_modules/@types/mailparser",
        "//:node_modules/@types/mime",
        "//:node_modules/@types/mime-db",
        "//:node_modules/@types/moment",
        "//:node_modules/@types/mysql",
        "//:node_modules/@types/node-fetch",
        "//:node_modules/@types/node-slack",
        "//:node_modules/@types/on-headers",
        "//:node_modules/@types/psl",
        "//:node_modules/@types/qs",
        "//:node_modules/@types/s3-download-stream",
        "//:node_modules/@types/sanitize-html",
        "//:node_modules/@types/shell-escape",
        "//:node_modules/@types/shelljs",
        "//:node_modules/@types/slug",
        "//:node_modules/@types/sockjs",
        "//:node_modules/@types/sqlstring",
        "//:node_modules/@types/tar-fs",
        "//:node_modules/@types/tough-cookie",
        "//:node_modules/@types/ua-parser-js",
        "//:node_modules/@types/write-file-atomic",
        "//:node_modules/abort-controller",
        "//:node_modules/airtable",
        "//:node_modules/aws-kcl",
        "//:node_modules/axios",
        "//:node_modules/base64url",
        "//:node_modules/body-parser",
        "//:node_modules/bytes",
        "//:node_modules/cheerio",
        "//:node_modules/chrono-node",
        "//:node_modules/compression",
        "//:node_modules/cookies",
        "//:node_modules/cron",
        "//:node_modules/csv-parse",
        "//:node_modules/csv-stringify",
        "//:node_modules/date-fns",
        "//:node_modules/deep-diff",
        "//:node_modules/diff-match-patch",
        "//:node_modules/emotion-server",
        "//:node_modules/esbuild",  # TODO(zbarsky): shouldn't depend on esbuild
        "//:node_modules/eslint",
        "//:node_modules/eventemitter3",
        "//:node_modules/execa",
        "//:node_modules/fast-json-stable-stringify",
        "//:node_modules/follow-redirects",
        "//:node_modules/fs-extra",
        "//:node_modules/glob",
        "//:node_modules/google-auth-library",
        "//:node_modules/graphql",
        "//:node_modules/graphql-tag",
        "//:node_modules/hashring",
        "//:node_modules/heapdump",
        "//:node_modules/html-to-text",
        "//:node_modules/http-shutdown",
        "//:node_modules/jsonwebtoken",
        "//:node_modules/jszip",
        "//:node_modules/sockopt",
        "//:node_modules/juice",
        "//:node_modules/jws",
        "//:node_modules/mailparser",
        "//:node_modules/maxmind",
        "//:node_modules/mime",
        "//:node_modules/mime-db",
        "//:node_modules/msgpackr",
        "//:node_modules/mysql",
        "//:node_modules/mysql2",
        "//:node_modules/nock",
        "//:node_modules/node-fetch",
        "//:node_modules/node-slack",
        "//:node_modules/on-headers",
        "//:node_modules/p-queue",
        "//:node_modules/piscina",
        "//:node_modules/prettier",
        "//:node_modules/psl",
        "//:node_modules/redisv4",
        "//:node_modules/s3-download-stream",
        "//:node_modules/sanitize-html",
        "//:node_modules/shell-escape",
        "//:node_modules/shelljs",
        "//:node_modules/slug",
        "//:node_modules/sockjs",
        "//:node_modules/source-map",
        "//:node_modules/sqlstring",
        "//:node_modules/stripe",
        "//:node_modules/tar-fs",
        "//:node_modules/twilio",
        "//:node_modules/typescript",  # TODO(zbarsky): shouldn't depend on typescript
        "//:node_modules/ua-parser-js",
        "//:node_modules/v8-profiler-next",
        "//:node_modules/windows-iana",
        "//:node_modules/write-file-atomic",
    ],
    srcs = ["trie.test.js"],
)
