bazel_dep(name = "bazel_features", version = "1.1.1")
bazel_dep(name = "rules_nodejs", version = "6.0.2")
bazel_dep(name = "aspect_rules_js", version = "1.34.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    no_optional = True,
    patch_args = {"*": ["-p1"]},
    pnpm_lock = "//:pnpm-lock.yaml",
    quiet = False,
    # By default lifecycle hooks are not sandboxed. So we just disable them for hermeticity.
    run_lifecycle_hooks = False,
)
use_repo(npm, "npm")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "18.16.0")
use_repo(node, "nodejs_toolchains")
